Land v2 vault protocol (one-file vault, multi-slot header, fingerprint identity)
Clean-break swap from the v0.2 folder vault to the v2 one-file vault:
- Multi-slot header (PASSPHRASE/DEVICE/RECOVERY); any one slot unwraps the DEK
- Argon2id vault passphrase KDF (Bouncy Castle); KDF catalog gains ARGON2ID
- Passphrase-bound fingerprint (HMAC-SHA-256, 128-bit) replaces vault-id as
  the non-secret routing identity, stored in the plaintext header
- Path + passphrase vault identity; exclusive per-process file lock
- Device/recovery/sync/backup flows re-keyed to fingerprint
- Removed VaultId and FileVaultStore (deprecation window closed)

Co-Authored-By: Claude <noreply@anthropic.com>