@@ -9,11 +9,9 @@ import java.nio.file.Path;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.util.Base64;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -22,40 +20,38 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-import top.focess.keystead.crypto.CryptoAlgorithmRegistry;
 import top.focess.keystead.crypto.CryptoException;
 import top.focess.keystead.crypto.DefaultCryptoService;
 import top.focess.keystead.crypto.DeviceKeyPair;
-import top.focess.keystead.crypto.VaultKey;
 import top.focess.keystead.memory.SecretBuffer;
 import top.focess.keystead.memory.SecretDestroyedException;
 import top.focess.keystead.model.KeyId;
 import top.focess.keystead.model.SecretClassification;
 import top.focess.keystead.model.SecretId;
 import top.focess.keystead.model.SecretMetadata;
-import top.focess.keystead.model.VaultHeader;
-import top.focess.keystead.model.VaultId;
-import top.focess.keystead.store.FileVaultStore;
 
 class VaultServiceTest {
 
     private static final Clock CLOCK =
             Clock.fixed(Instant.parse("2026-07-02T00:00:00Z"), ZoneOffset.UTC);
-    private static final VaultId VAULT_ID =
-            new VaultId(UUID.fromString("10000000-0000-0000-0000-000000000001"));
 
     @TempDir Path tempDir;
 
+    private Path vaultFile() {
+        return tempDir.resolve("vault.kv");
+    }
+
     @Test
     void createSaveReopenAndReadLogin() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         SecretId secretId;
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             secretId = saveGitHubLogin(vault);
         }
 
-        try (VaultHandle vault = service.openVault(VAULT_ID, master())) {
+        try (VaultHandle vault = service.openVault(vaultFile(), master())) {
             vault.withLogin(
                     secretId,
                     view -> {
@@ -82,16 +78,17 @@ class VaultServiceTest {
 
     @Test
     void rotateVaultKeyReencryptsRecordsAndPersistsNewKeyId() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         SecretId secretId;
         KeyId originalKeyId;
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             secretId = saveGitHubLogin(vault);
             originalKeyId = vault.vaultKeyId();
         }
 
         KeyId rotatedKeyId;
-        try (VaultHandle rotated = service.rotateVaultKey(VAULT_ID, master())) {
+        try (VaultHandle rotated = service.rotateVaultKey(vaultFile(), master())) {
             rotatedKeyId = rotated.vaultKeyId();
             assertNotEquals(originalKeyId, rotatedKeyId);
             rotated.withLogin(
@@ -101,7 +98,7 @@ class VaultServiceTest {
                                     chars -> assertArrayEquals(chars("secret-password"), chars)));
         }
 
-        try (VaultHandle reopened = service.openVault(VAULT_ID, master())) {
+        try (VaultHandle reopened = service.openVault(vaultFile(), master())) {
             assertEquals(rotatedKeyId, reopened.vaultKeyId());
             reopened.withLogin(
                     secretId,
@@ -113,74 +110,41 @@ class VaultServiceTest {
 
     @Test
     void wrongMasterPasswordCannotOpenVault() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
         try (VaultHandle ignored =
-                service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             // create vault
         }
 
         assertThrows(
-                CryptoException.class, () -> service.openVault(VAULT_ID, chars("wrong-password")));
+                CryptoException.class,
+                () -> service.openVault(vaultFile(), chars("wrong-password")));
     }
 
     @Test
     void openVaultWithDeviceKeyRejectsPasswordProtectedVault() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
         try (VaultHandle ignored =
-                service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             // create a master-password-protected vault
         }
 
         assertThrows(
                 ValidationException.class,
-                () -> service.openVaultWithDeviceKey(VAULT_ID, new byte[32], new byte[16]));
-    }
-
-    @Test
-    void openVaultAcceptsApprovedSha512KdfHeader() {
-        FileVaultStore store = new FileVaultStore(tempDir);
-        DefaultCryptoService crypto = new DefaultCryptoService();
-        VaultService service = new DefaultVaultService(store, crypto, CLOCK);
-        KeyId keyId = new KeyId("vault-key-" + VAULT_ID.value());
-
-        try (VaultKey key = crypto.generateVaultKey(keyId)) {
-            byte[] salt = crypto.randomSalt();
-            byte[] wrappedVaultKey =
-                    crypto.wrapVaultKey(
-                            key,
-                            master(),
-                            salt,
-                            DefaultCryptoService.DEFAULT_KDF_ITERATIONS,
-                            CryptoAlgorithmRegistry.KDF_PBKDF2_HMAC_SHA512);
-            store.saveVaultHeader(
-                    new VaultHeader(
-                            VAULT_ID,
-                            1,
-                            CryptoAlgorithmRegistry.KDF_PBKDF2_HMAC_SHA512,
-                            salt,
-                            DefaultCryptoService.DEFAULT_KDF_ITERATIONS,
-                            keyId,
-                            wrappedVaultKey,
-                            CLOCK.instant(),
-                            CLOCK.instant()));
-        }
-
-        try (VaultHandle vault = service.openVault(VAULT_ID, master())) {
-            assertEquals(VAULT_ID, vault.vaultId());
-        }
+                () -> service.openVaultWithDeviceKey(vaultFile(), new byte[32], new byte[16]));
     }
 
     @Test
     void vaultHandleCreatesContextBoundDeviceKeyPackage() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         DefaultCryptoService crypto = new DefaultCryptoService();
         byte[] context = "vault:vault-1:device:laptop-1".getBytes(StandardCharsets.UTF_8);
 
         try (DeviceKeyPair device = crypto.generateDeviceKeyPair();
                 VaultHandle vault =
-                        service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+                        service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             byte[] packageBytes = vault.wrapVaultKeyForDevice(device.publicKey(), context);
 
             assertTrue(packageBytes.length > 0);
@@ -205,11 +169,12 @@ class VaultServiceTest {
 
     @Test
     void loginViewIsInvalidAfterCallbackReturns() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         SecretId secretId;
         AtomicReference<LoginSecretView> captured = new AtomicReference<>();
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             secretId = saveGitHubLogin(vault);
             vault.withLogin(secretId, captured::set);
         }
@@ -221,9 +186,10 @@ class VaultServiceTest {
 
     @Test
     void saveLoginRequiresTitleAndPassword() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             assertThrows(
                     ValidationException.class,
                     () ->
@@ -240,27 +206,27 @@ class VaultServiceTest {
 
     @Test
     void persistedLoginRecordDoesNotContainPlaintextSecretValues() throws IOException {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
-        SecretId secretId;
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
-            secretId = saveGitHubLogin(vault);
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
+            saveGitHubLogin(vault);
         }
 
-        String file =
-                Files.readString(
-                        tempDir.resolve("secrets").resolve(secretId.value() + ".properties"));
-        assertFalse(file.contains("alice@example.com"));
-        assertFalse(file.contains("secret-password"));
-        assertFalse(file.contains("private note"));
+        byte[] bytes = Files.readAllBytes(vaultFile());
+        String vaultContents = new String(bytes, StandardCharsets.UTF_8);
+        assertFalse(vaultContents.contains("alice@example.com"));
+        assertFalse(vaultContents.contains("secret-password"));
+        assertFalse(vaultContents.contains("private note"));
     }
 
     @Test
     void deleteLoginRemovesSecretFromVault() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         SecretId secretId;
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             secretId = saveGitHubLogin(vault);
             vault.deleteSecret(secretId);
 
@@ -271,9 +237,10 @@ class VaultServiceTest {
 
     @Test
     void updateLoginReplacesPayloadAndUsesNewRevision() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             SecretId secretId = saveGitHubLogin(vault);
 
             try (SecretBuffer username = SecretBuffer.fromChars(chars("alice@example.com"));
@@ -307,24 +274,24 @@ class VaultServiceTest {
     }
 
     @Test
-    void concurrentVaultHandlesSaveWithDistinctRevisions() throws Exception {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+    void concurrentSavesThroughOneHandleGetDistinctRevisions() throws Exception {
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
         ExecutorService executor = Executors.newFixedThreadPool(2);
 
-        try (VaultHandle first = service.createVault(new CreateVaultRequest(VAULT_ID), master());
-                VaultHandle second = service.openVault(VAULT_ID, master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             CountDownLatch start = new CountDownLatch(1);
             Future<SecretId> firstSave =
                     executor.submit(
                             () -> {
                                 await(start);
-                                return saveLogin(first, "GitHub", "alice@example.com");
+                                return saveLogin(vault, "GitHub", "alice@example.com");
                             });
             Future<SecretId> secondSave =
                     executor.submit(
                             () -> {
                                 await(start);
-                                return saveLogin(second, "Google", "alice@gmail.com");
+                                return saveLogin(vault, "Google", "alice@gmail.com");
                             });
 
             start.countDown();
@@ -333,7 +300,7 @@ class VaultServiceTest {
             assertNotNull(secondSave.get(5, TimeUnit.SECONDS));
             assertEquals(
                     List.of(1L, 2L),
-                    first.listSecrets().stream().map(SecretMetadata::revision).sorted().toList());
+                    vault.listSecrets().stream().map(SecretMetadata::revision).sorted().toList());
         } finally {
             executor.shutdownNow();
         }
@@ -341,9 +308,10 @@ class VaultServiceTest {
 
     @Test
     void updateStructuredSecretReplacesFieldsAndUsesNewRevision() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
 
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
+        try (VaultHandle vault =
+                service.createVault(new CreateVaultRequest(vaultFile()), master())) {
             SecretId secretId;
             try (SecretBuffer token = SecretBuffer.fromChars(chars("ghp_old"))) {
                 secretId =
@@ -377,52 +345,9 @@ class VaultServiceTest {
     }
 
     @Test
-    void tamperedLoginMetadataCannotBeOpened() throws IOException {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
-        SecretId secretId;
-
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
-            secretId = saveGitHubLogin(vault);
-        }
-
-        Path secretFile = tempDir.resolve("secrets").resolve(secretId.value() + ".properties");
-        String file = Files.readString(secretFile);
-        Files.writeString(
-                secretFile,
-                file.replace(
-                        "metadata.title=" + b64("GitHub"), "metadata.title=" + b64("Payroll")));
-
-        try (VaultHandle vault = service.openVault(VAULT_ID, master())) {
-            assertThrows(
-                    CryptoException.class,
-                    () -> vault.withLogin(secretId, view -> fail("tampered metadata opened")));
-        }
-    }
-
-    @Test
-    void tamperedLoginEnvelopeAadCannotBeOpened() throws IOException {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
-        SecretId secretId;
-
-        try (VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master())) {
-            secretId = saveGitHubLogin(vault);
-        }
-
-        Path secretFile = tempDir.resolve("secrets").resolve(secretId.value() + ".properties");
-        String file = Files.readString(secretFile);
-        Files.writeString(secretFile, file + "\nenvelope.aad=" + b64("tampered-aad") + "\n");
-
-        try (VaultHandle vault = service.openVault(VAULT_ID, master())) {
-            assertThrows(
-                    CryptoException.class,
-                    () -> vault.withLogin(secretId, view -> fail("tampered AAD opened")));
-        }
-    }
-
-    @Test
     void closingVaultHandleRejectsFurtherOperations() {
-        VaultService service = new DefaultVaultService(new FileVaultStore(tempDir), CLOCK);
-        VaultHandle vault = service.createVault(new CreateVaultRequest(VAULT_ID), master());
+        VaultService service = new DefaultVaultService(new DefaultCryptoService(), CLOCK);
+        VaultHandle vault = service.createVault(new CreateVaultRequest(vaultFile()), master());
 
         vault.close();
 
@@ -476,10 +401,6 @@ class VaultServiceTest {
 
     private static char[] chars(String value) {
         return value.toCharArray();
-    }
-
-    private static String b64(String value) {
-        return Base64.getEncoder().encodeToString(value.getBytes(StandardCharsets.UTF_8));
     }
 
     private static byte[] privateKeyBytes(DeviceKeyPair device) {
